--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "python-multipart>=0.0.6",
     "jinja2>=3.1.3",
     "aiofiles>=23.2.1",
+    "sse-starlette>=2.0.0",
 ]
 
 [project.optional-dependencies]
