refactor: Update transcription progress reporting to use an `on_progress` callback instead of `tqdm` monkeypatch and add `av` dependency.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,10 +8,20 @@ services:
       - ./uploads:/app/uploads
     environment:
       - MAX_UPLOAD_SIZE=500MB
+      - WHISPER_MODEL=base
+      - WHISPER_DEVICE=cuda
+      - WHISPER_COMPUTE_TYPE=float16
     restart: unless-stopped
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/')"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 15s
+      start_period: 30s
